--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/base-64": "^0.1.2",
+    "@types/js-yaml": "^3.9.0",
     "@types/request-promise-native": "^1.0.6",
+    "@types/winston": "^2.3.3",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.3.0",
     "gulp-shell": "^0.6.3",
@@ -19,7 +21,9 @@
   },
   "dependencies": {
     "base-64": "^0.1.0",
+    "js-yaml": "^3.9.0",
     "request": "^2.81.0",
-    "request-promise-native": "^1.0.4"
+    "request-promise-native": "^1.0.4",
+    "winston": "^2.3.1"
   }
 }
