--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "target": "ES2017",
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "sourceMap": true,
+    "outDir": "dist"
   }
 }
