--- a/awesum-generator/package.json
+++ b/awesum-generator/package.json
@@ -20,7 +20,9 @@
     "typescript": "^2.4.1"
   },
   "dependencies": {
+    "@types/fs-extra": "^3.0.3",
     "base-64": "^0.1.0",
+    "fs-extra": "^4.0.0",
     "js-yaml": "^3.9.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4",
