--- a/awesum-web/package.json
+++ b/awesum-web/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "js-yaml": "^3.9.0",
+    "path": "^0.12.7",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
