--- a/awesum-web/package.json
+++ b/awesum-web/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "js-yaml": "^3.9.0",
+    "moment": "^2.18.1",
     "path": "^0.12.7",
     "rxjs": "^5.1.0",
     "typeface-open-sans": "0.0.31",
@@ -35,6 +36,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/js-yaml": "^3.9.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
